# mobile-manipulation-visual-servo

./: README.md
arduimu_ros/: CMakeLists.txt  README.md  package.xml
arduimu_ros/launch/: arduimu.launch
arduimu_ros/nodes/: arduimu.py
bulldog_control/: CMakeLists.txt  package.xml
bulldog_control/config/: control.yaml
bulldog_control/scripts/: gripper_test.py  stow_ur5  ur_control.py  ur_control.py~
bulldog_gazebo/: CMakeLists.txt  package.xml
bulldog_gazebo/launch/: bulldog_empty_world.launch  spawn_bulldog.launch
bulldog_gazebo/urdf/: bulldog.gazebo.xacro  description.gazebo.xacro
bulldog_gazebo_moveit_config/: .setup_assistant
bulldog_gazebo_moveit_config/config/: bulldog_robot.srdf  controllers.yaml
bulldog_gazebo_moveit_config/launch/: bulldog_gazebo_moveit_execution.launch  demo.launch  joystick_control.launch  move_group.launch  moveit.rviz  planning_context.launch  sensor_manager.launch.xml  z_bulldog.rviz
bulldog_gazebo_moveit_config/scenes/: bulldog_ground.scene
bulldog_ur5_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
bulldog_ur5_moveit_config/config/: bulldog_robot.srdf  (+1 more)
bulldog_ur5_test_config/: .setup_assistant  CMakeLists.txt  package.xml
common/: CMakeLists.txt~  package.xml  package.xml~
motion_plan/: CMakeLists.txt  package.xml
move_group/: CMakeLists.txt  CMakeLists.txt~  package.xml
pic_save_n_process/: CMakeLists.txt~  package.xml
ur5_joy_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
visual_servo/: CMakeLists.txt
visual_servo_msgs/: CMakeLists.txt  package.xml
(+85 files in other folders)
